# Downloads_Cleaner

./: .gitignore  Dev.ipynb  Downloads_Cleaner.py  README.md  cleaner.py  icon.icns  makefile  pyproject.toml  requirements.txt  scanners.py  test_cleaner.py
.github/workflows/: validation.yml  validations.yml
images/: icon.icns
src/pkg_cleaner/: Downloads_Cleaner.py  __init__.py  cleaner.py  scanners.py
tests/: test_cleaner.py  test_scanner.py
